Adding-Today's study
If else statements
data types
switch cases 
loops

--- a/assignment1.html
+++ b/assignment1.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello World in JavaScript</title>
+    <title>Assignment 1</title>
     <script>
-        alert("Hello World");
-    </script>   
-
+        function is_integer(n){
+            return typeof(n) == "number" && Math.floor(n) == n;
+        }
+        console.log(is_integer(6))
+    </script>
 </head>
 <body>
     
