--- a/for_loop.html
+++ b/for_loop.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello World in JavaScript</title>
+    <title>for Loop</title>
     <script>
-        alert("Hello World");
-    </script>   
-
+        for(var i = 0; i <=100; i++){
+         console.log(i)   
+        }
+    </script>
 </head>
 <body>
     
