--- a/while_loop.html
+++ b/while_loop.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello World in JavaScript</title>
-    <script>
-        alert("Hello World");
-    </script>   
-
+    <title>While Loop</title>
+    <script>    
+        var i = 1
+        while(i <= 10){
+            console.log(i);
+            i++;        
+        }
+    </script>
 </head>
 <body>
     
